c_tests = [
    {
        'name': 'ncm_cfg',
        'sources': ['test_ncm_cfg.c'],
    },
    {
        'name': 'ncm_generic',
        'sources': ['test_ncm_generic.c'],
    },
    {
        'name': 'ncm_sparam',
        'sources': ['test_ncm_sparam.c'],
    },
    {
        'name': 'ncm_diff',
        'sources': ['test_ncm_diff.c'],
    },
    {
        'name': 'ncm_dtuple',
        'sources': ['test_ncm_dtuple.c'],
    },
    {
        'name': 'ncm_fftlog',
        'sources': ['test_ncm_fftlog.c'],
        'timeout': 0,
        'priority': 10,
    },
    {
        'name': 'ncm_vector',
        'sources': ['test_ncm_vector.c'],
    },
    {
        'name': 'ncm_matrix',
        'sources': ['test_ncm_matrix.c'],
    },
    {
        'name': 'ncm_stats_vec',
        'sources': ['test_ncm_stats_vec.c'],
    },
    {
        'name': 'ncm_stats_dist1d_epdf',
        'sources': ['test_ncm_stats_dist1d_epdf.c'],
    },
    {
        'name': 'ncm_stats_dist',
        'sources': ['test_ncm_stats_dist.c'],
        'timeout': 0,
        'priority': 10,
        'suite': ['c-slow', 'stats-dist'],
    },
    {
        'name': 'ncm_stats_dist_kernel',
        'sources': ['test_ncm_stats_dist_kernel.c'],
    },
    {
        'name': 'ncm_spline',
        'sources': ['test_ncm_spline.c'],
    },
    {
        'name': 'ncm_spline2d',
        'sources': ['test_ncm_spline2d.c'],
    },
    {
        'name': 'ncm_spline_vec',
        'sources': ['test_ncm_spline_vec.c'],
    },
    {
        'name': 'ncm_integral1d',
        'sources': ['test_ncm_integral1d.c'],
    },
    {
        'name': 'ncm_integral_nd',
        'sources': ['test_ncm_integral_nd.c'],
    },
    {
        'name': 'ncm_sf_sbessel',
        'sources': ['test_ncm_sf_sbessel.c'],
    },
    {
        'name': 'ncm_mpsf_0F1',
        'sources': ['test_ncm_mpsf_0F1.c'],
    },
    {
        'name': 'ncm_mpsf_trig_int',
        'sources': ['test_ncm_mpsf_trig_int.c'],
    },
    {
        'name': 'ncm_model',
        'sources': ['test_ncm_model.c', 'ncm_model_test.c', 'ncm_model_test.h'],
    },
    {
        'name': 'ncm_model_ctrl',
        'sources': ['test_ncm_model_ctrl.c'],
    },
    {
        'name': 'ncm_mset',
        'sources': ['test_ncm_mset.c'],
    },
    {
        'name': 'ncm_mset_catalog',
        'sources': ['test_ncm_mset_catalog.c'],
        'timeout': 0,
        'priority': 10,
    },
    {
        'name': 'ncm_obj_array',
        'sources': ['test_ncm_obj_array.c'],
    },
    {
        'name': 'ncm_serialize',
        'sources': ['test_ncm_serialize.c'],
    },
    {
        'name': 'ncm_data_gauss_cov',
        'sources': [
            'test_ncm_data_gauss_cov.c',
            'ncm_data_gauss_cov_test.c',
            'ncm_data_gauss_cov_test.h',
        ],
        'timeout': 0,
    },
    {
        'name': 'ncm_fit',
        'sources': ['test_ncm_fit.c'],
        'timeout': 0,
    },
    {
        'name': 'ncm_fit_state',
        'sources': ['test_ncm_fit_state.c'],
    },
    {
        'name': 'ncm_fit_esmcmc',
        'sources': ['test_ncm_fit_esmcmc.c'],
        'timeout': 0,
        'priority': 10,
        'suite': ['c-slow', 'fit-esmcmc'],
    },
    {
        'name': 'ncm_func_eval',
        'sources': ['test_ncm_func_eval.c'],
    },
    {
        'name': 'ncm_sf_spherical_harmonics',
        'sources': ['test_ncm_sf_spherical_harmonics.c'],
    },
    {
        'name': 'ncm_sphere_map',
        'sources': ['test_ncm_sphere_map.c'],
        'timeout': 0,
    },
    {
        'name': 'ncm_util',
        'sources': ['test_ncm_util.c'],
    },
    {
        'name': 'ncm_quaternion',
        'sources': ['test_ncm_quaternion.c'],
    },
    {
        'name': 'nc_halo_bias',
        'sources': ['test_nc_halo_bias.c'],
    },
    {
        'name': 'nc_hicosmo_de',
        'sources': ['test_nc_hicosmo_de.c'],
    },
    {
        'name': 'nc_hicosmo_qgw',
        'sources': ['test_nc_hicosmo_qgw.c'],
    },
    {
        'name': 'nc_window',
        'sources': ['test_nc_window.c'],
    },
    {
        'name': 'nc_transfer_func',
        'sources': ['test_nc_transfer_func.c'],
    },
    {
        'name': 'nc_galaxy_acf',
        'sources': ['test_nc_galaxy_acf.c'],
    },
    {
        'name': 'nc_recomb',
        'sources': ['test_nc_recomb.c'],
    },
    {
        'name': 'nc_cbe',
        'sources': ['test_nc_cbe.c'],
        'timeout': 0,
    },
    {
        'name': 'nc_hiqg_1d',
        'sources': ['test_nc_hiqg_1d.c'],
    },
    {
        'name': 'nc_data_bao_dtr_dhr',
        'sources': ['test_nc_data_bao_dtr_dhr.c'],
    },
    {
        'name': 'nc_data_bao_rdv',
        'sources': ['test_nc_data_bao_rdv.c'],
    },
    {
        'name': 'nc_data_bao_dvdv',
        'sources': ['test_nc_data_bao_dvdv.c'],
    },
    {
        'name': 'nc_data_bao_dvr_dtdh',
        'sources': ['test_nc_data_bao_dvr_dtdh.c'],
    },
    {
        'name': 'nc_data_cluster_ncount',
        'sources': ['test_nc_data_cluster_ncount.c'],
    },
    {
        'name': 'nc_cluster_pseudo_counts',
        'sources': ['test_nc_cluster_pseudo_counts.c'],
    },
    {
        'name': 'nc_data_cluster_ncounts_gauss',
        'sources': ['test_nc_data_cluster_ncounts_gauss.c'],
    },
    {
        'name': 'nc_cluster_abundance',
        'sources': ['test_nc_cluster_abundance.c'],
    },
    {
        'name': 'nc_halo_density_profile',
        'sources': ['test_nc_halo_density_profile.c'],
    },
    {
        'name': 'nc_halo_position',
        'sources': ['test_nc_halo_position.c'],
    },
    {
        'name': 'nc_data_hubble',
        'sources': ['test_nc_data_hubble.c'],
    },
    {
        'name': 'nc_wl_surface_mass_density',
        'sources': ['test_nc_wl_surface_mass_density.c'],
    },
    {
        'name': 'nc_powspec',
        'sources': ['test_nc_powspec.c'],
        'timeout': 0,
        'priority': 10,
        'suite': ['c-slow', 'powspec'],
    },
    {
        'name': 'nc_distance',
        'sources': ['test_nc_distance.c'],
    },
    {
        'name': 'nc_data_cluster_wl',
        'sources': ['test_nc_data_cluster_wl.c'],
        'timeout': 0,
        'priority': 10,
        'suite': ['c-slow', 'data-cluster-wl'],
    },
    {
        'name': 'nc_galaxy_wl_obs',
        'sources': ['test_nc_galaxy_wl_obs.c'],
    },
    {
        'name': 'nc_galaxy_sd_position',
        'sources': ['test_nc_galaxy_sd_position.c'],
    },
    {
        'name': 'nc_galaxy_sd_true_redshift',
        'sources': ['test_nc_galaxy_sd_true_redshift.c'],
    },
    {
        'name': 'nc_galaxy_sd_obs_redshift',
        'sources': ['test_nc_galaxy_sd_obs_redshift.c'],
    },
    {
        'name': 'nc_galaxy_sd_shape',
        'sources': ['test_nc_galaxy_sd_shape.c'],
    },
]
tests_c_args = ['-DG_LOG_DOMAIN="NUMCOSMO"', '-DHAVE_CONFIG_H']

foreach c_test : c_tests
    executable_test = executable(
        c_test['name'],
        c_test['sources'],
        c_args: tests_c_args,
        dependencies: [libnumcosmo_dep, gsl_dep],
        include_directories: [configinc, numcosmoinc],
    )
    if c_test.has_key('timeout')
        timeout = c_test['timeout']
    else
        timeout = 60
    endif
    if c_test.has_key('priority')
        priority = c_test['priority']
    else
        priority = 0
    endif
    if c_test.has_key('suite')
        suite = c_test['suite']
    else
        suite = ['c']
    endif
    test(
        c_test['name'],
        executable_test,
        timeout: timeout,
        env: [
            'G_TEST_SRCDIR=@0@'.format(meson.current_source_dir()),
            'G_TEST_BUILDDIR=@0@'.format(meson.current_build_dir()),
        ],
        protocol: 'tap',
        priority: priority,
        suite: suite,
    )
endforeach

if mpi_c_dep.found()
    mpiexec = find_program('mpiexec', required: false)
    if mpiexec.found()

        c_tests_mpi = [
            {
                'name': 'ncm_fit_esmcmc_mpi',
                'sources': ['test_ncm_fit_esmcmc_mpi.c'],
                'timeout': 0,
            },
        ]
        foreach c_test_mpi : c_tests_mpi
            executable_test = executable(
                c_test_mpi['name'],
                c_test_mpi['sources'],
                c_args: tests_c_args,
                dependencies: [libnumcosmo_dep],
                include_directories: [configinc, numcosmoinc],
            )
            if c_test_mpi.has_key('timeout')
                timeout = c_test_mpi['timeout']
            else
                timeout = 60
            endif
            if c_test_mpi.has_key('suite')
                suite = c_test_mpi['suite']
            else
                suite = ['c', 'mpi']
            endif

            mpiexec_args = (
                [
                    '-n', '2',
                    executable_test.full_path(),
                ]
            )
            test(
                c_test_mpi['name'],
                mpiexec,
                args: mpiexec_args,
                timeout: timeout,
                env: [
                    'G_TEST_SRCDIR=@0@'.format(meson.current_source_dir()),
                    'G_TEST_BUILDDIR=@0@'.format(meson.current_build_dir()),
                ],
                protocol: 'tap',
                suite: suite,
            )
        endforeach
    endif
endif

# Python tests are now in a separate subdirectory
subdir('python')