## Process this file with automake to produce Makefile.in

SUBDIRS = 

examplesdir = \
        $(pkgdatadir)-$(VERSION)/examples/model_mcmc

examples_DATA =           \
        README            \
	nc_curve.h        \
	nc_curve.c

##	nc_curve_linear.h \
##	nc_curve_linear.c \
##	nc_curve_spline.h \
##	nc_curve_spline.c \
##	nc_data_curve.h   \
##	nc_data_curve.c   \
##	curve_generate.c  \
##	curve_fit.c       \
##	curve_mcmc.c
        

EXTRA_DIST = \
        $(examples_DATA)

