## Process this file with automake to produce Makefile.in

SUBDIRS = 

examplesdir = \
	$(pkgdatadir)-$(VERSION)/examples/pydata_simple

examples_DATA = \
	README                 \
	py_sline_model.py      \
	py_sline_data.py       \
	py_sline_gauss.py      \
	py_sline_mfunc.py      \
	example_create_data.py \
	example_fit.py         \
	example_mcmc.py        \
	example_esmcmc.py      \
	example_mc.py


EXTRA_DIST = \
	$(examples_DATA)

 