
class_sources = files(
    'tools/growTable.c',
    'tools/dei_rkck.c',
    'tools/sparse.c',
    'tools/evolver_rkck.c',
    'tools/evolver_ndf15.c',
    'tools/arrays.c',
    'tools/parser.c',
    'tools/quadrature.c',
    'tools/hyperspherical.c',
    'tools/common.c',
    'tools/hermite3_interpolation_csource.h',
    'tools/hermite4_interpolation_csource.h',
    'tools/hermite6_interpolation_csource.h',
    'include/common.h',
    'include/hyperspherical.h',
    'include/evolver_rkck.h',
    'include/evolver_ndf15.h',
    'include/growTable.h',
    'include/quadrature.h',
    'include/parser.h',
    'include/dei_rkck.h',
    'include/sparse.h',
    'include/arrays.h',
    'hyrec/hyrectools.c',
    'hyrec/helium.c',
    'hyrec/hydrogen.c',
    'hyrec/history.c',
    'hyrec/hyrec.h',
    'hyrec/history.h',
    'hyrec/helium.h',
    'hyrec/hydrogen.h',
    'hyrec/hyrectools.h',
    'source/input.c',
    'source/background.c',
    'source/thermodynamics.c',
    'source/perturbations.c',
    'source/primordial.c',
    'source/nonlinear.c',
    'source/transfer.c',
    'source/spectra.c',
    'source/lensing.c',
    'include/background.h',
    'include/input.h',
    'include/nonlinear.h',
    'include/thermodynamics.h',
    'include/primordial.h',
    'include/lensing.h',
    'include/perturbations.h',
    'include/spectra.h',
    'include/transfer.h',
    'include/class.h',
    'include/output.h',
    'include/svnversion.h',
)

class_c_args = [
    '-DG_LOG_DOMAIN="NUMCOSMO"', 
    '-DHAVE_CONFIG_H', 
    '-D__CLASSDIR__="@0@/class_data"'.format(numcosmo_pkgdatadir), 
    '-Wno-sign-compare',
    '-Wno-implicit-fallthrough',
]

inc = include_directories('include')

libclass = static_library(
    'class',
    sources: class_sources,
    dependencies: [omp_c, glib_dep],
    include_directories: [configinc, numcosmoinc, inc],
    install: false,
    gnu_symbol_visibility: 'hidden',
    c_args: class_c_args,
)
